@@ -2,7 +2,8 @@
 
 ACLOCAL = $(top_srcdir)/aclocal.sh
 
-bin_PROGRAMS = music eventsource eventsink eventselect @OPTIONAL_UTILS@
+bin_PROGRAMS = music eventsource eventsink eventselect eventgenerator \
+	       @OPTIONAL_UTILS@
 EXTRA_PROGRAMS = viewevents
 
 music_SOURCES = music.cc application_mapper.cc application_mapper.hh
@@ -20,6 +21,10 @@ eventsink_LDADD = $(top_builddir)/src/libmusic.la $(top_builddir)/rudeconfig/lib
 eventselect_SOURCES = eventselect.cc
 eventselect_CXXFLAGS = -I$(top_srcdir)/src -I$(top_srcdir) @MPI_CXXFLAGS@
 eventselect_LDADD = $(top_builddir)/src/libmusic.la $(top_builddir)/rudeconfig/librudeconfig.la @MPI_LDFLAGS@
+
+eventgenerator_SOURCES = eventgenerator.cc
+eventgenerator_CXXFLAGS = -I$(top_srcdir)/src -I$(top_srcdir) @MPI_CXXFLAGS@
+eventgenerator_LDADD = $(top_builddir)/src/libmusic.la $(top_builddir)/rudeconfig/librudeconfig.la @MPI_LDFLAGS@
 
 viewevents_SOURCES = viewevents.cpp VisualiseNeurons.cpp VisualiseNeurons.h
 viewevents_CXXFLAGS = -I$(top_srcdir)/src -I$(top_srcdir) @MPI_CXXFLAGS@
