@@ -1,3 +1,9 @@
+2008-11-05  Mikael Djurfeldt  <mikael@djurfeldt.com>
+
+	* eventgenerator.cc: New file.
+
+	* Makefile.am: Added eventgenerator.cc.
+
 2008-11-03  Mikael Djurfeldt  <mikael@djurfeldt.com>
 
 	* eventsink.cc, eventselect.cc: New files.
